--- a/thesis.tex
+++ b/thesis.tex
@@ -42,6 +42,7 @@
 % TODO: pick a font
 \usepackage[charter]{mathdesign}
 %\usepackage{millennial}
+\usepackage[makeroom]{cancel}
 
 % \usepackage{amsfonts}       % math fonts
 \usepackage{amsthm}         % theorems, definitions, etc.
