--- a/math_commands.tex
+++ b/math_commands.tex
@@ -103,6 +103,35 @@
 \def\ry{{\textnormal{y}}}
 \def\rz{{\textnormal{z}}}
 
+% Random variables capital letter
+\def\rEta{{\textnormal{$\Eta$}}}
+\def\rA{{\textnormal{A}}}
+\def\rB{{\textnormal{B}}}
+\def\rC{{\textnormal{C}}}
+\def\rD{{\textnormal{D}}}
+\def\rE{{\textnormal{E}}}
+\def\rF{{\textnormal{F}}}
+\def\rG{{\textnormal{G}}}
+\def\rH{{\textnormal{H}}}
+\def\rI{{\textnormal{I}}}
+\def\rJ{{\textnormal{J}}}
+\def\rK{{\textnormal{K}}}
+\def\rL{{\textnormal{L}}}
+% rm is already a command, just don't name any random variables m
+\def\rN{{\textnormal{N}}}
+\def\rO{{\textnormal{O}}}
+\def\rP{{\textnormal{P}}}
+\def\rQ{{\textnormal{Q}}}
+\def\rR{{\textnormal{R}}}
+\def\rS{{\textnormal{S}}}
+\def\rT{{\textnormal{T}}}
+\def\rU{{\textnormal{U}}}
+\def\rV{{\textnormal{V}}}
+\def\rW{{\textnormal{W}}}
+\def\rX{{\textnormal{X}}}
+\def\rY{{\textnormal{Y}}}
+\def\rZ{{\textnormal{Z}}}
+
 % Random vectors
 \def\rvepsilon{{\mathbf{\epsilon}}}
 \def\rvtheta{{\mathbf{\theta}}}
