Before major cleanup of duplicate sections

--- a/thesis.tex
+++ b/thesis.tex
@@ -59,6 +59,11 @@
 \usepackage{paralist}       % improved enumerate and itemize
 \usepackage[usenames]{xcolor}  % typesetting in color
 \usepackage[colorinlistoftodos,prependcaption,textsize=tiny]{todonotes}
+\usepackage{tcolorbox}
+
+\usepackage{hyperref}
+\usepackage{url}
+    
 
 \newlength{\notationgap}
 \setlength{\notationgap}{1pc}
@@ -135,6 +140,7 @@ Abstract.
 \include{notation}
 \include{chap01}
 \include{chap02}
+\include{chap03}
 
 \include{epilog}
 
