--- a/math_commands.tex
+++ b/math_commands.tex
@@ -517,6 +517,8 @@
 \newcommand*\diff{\mathop{}\!\mathrm{d}}
 \newcommand*\Diff[1]{\mathop{}\!\mathrm{d^#1}}
 \newcommand{\dx}{\diff x}
+\newcommand{\dy}{\diff y}
+\newcommand{\dz}{\diff z}
 
 % TODO: why is \E and \R already defined?
 %\newcommand{\E}{\mathbb{E}}
